# emergence

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  emergence-config.yaml
.project/: README.md  agent-system.md  build-plan.md  changelog.md  data-schemas.md  design-system.md  prd.md  tech-stack.md  world-engine.md
crates/emergence-agents/: Cargo.toml
crates/emergence-agents/src/: agent.rs  belief_detection.rs  communication.rs  config.rs  constructs.rs  crafting.rs  crime_justice.rs  death.rs  deception.rs  diplomacy.rs  economy_detection.rs  error.rs  family.rs  governance.rs  inventory.rs  knowledge.rs  lib.rs  memory.rs  persuasion.rs  propaganda.rs  reproduction.rs  reputation.rs  skills.rs  social.rs  trade.rs  vitals.rs
crates/emergence-agents/src/actions/: combat.rs  conflict.rs  costs.rs  handlers.rs  mod.rs  theft.rs  validation.rs
crates/emergence-core/: Cargo.toml
crates/emergence-core/src/: clock.rs  config.rs  decision.rs  experiment.rs  feasibility.rs  fuzzy.rs  lib.rs  operator.rs  perception.rs  runner.rs  tick.rs
crates/emergence-db/: Cargo.toml
crates/emergence-db/migrations/: 0001_core_tables.sql  0002_ledger.sql  0003_events.sql  0004_supporting_tables.sql  0005_simulation_runs.sql  0006_social_constructs.sql  0007_deception_and_reputation.sql  0008_event_type_expansion.sql  0009_experiment_snapshots.sql
crates/emergence-db/src/: dragonfly.rs  error.rs  event_store.rs  experiment_store.rs  ledger_store.rs  lib.rs  postgres.rs  snapshot_store.rs  tick_persist.rs
crates/emergence-db/tests/: integration.rs
crates/emergence-engine/: Cargo.toml
crates/emergence-engine/src/: error.rs  main.rs  nats_decision.rs  observer_callback.rs  spawner.rs
crates/emergence-events/: Cargo.toml
crates/emergence-events/src/: lib.rs
crates/emergence-ledger/: Cargo.toml
crates/emergence-ledger/src/: conservation.rs  ledger.rs  lib.rs  transaction.rs
crates/emergence-observer/: Cargo.toml
crates/emergence-observer/src/: alerts.rs  anomaly.rs  error.rs  handlers.rs  lib.rs  operator.rs  router.rs  server.rs  social.rs  startup.rs  state.rs  ws.rs
crates/emergence-observer/tests/: api_tests.rs
crates/emergence-runner/: Cargo.toml
crates/emergence-runner/src/: complexity.rs  config.rs  containment.rs  cost.rs  error.rs  llm.rs  main.rs  nats.rs  parse.rs  prompt.rs  rule_engine.rs  runner.rs
crates/emergence-types/: Cargo.toml
crates/emergence-types/bindings/bindings/: AccessControlList.ts  ActionOutcome.ts  ActionParameters.ts  ActionRejectedDetails.ts  ActionRequest.ts  ActionResult.ts  ActionSucceededDetails.ts  ActionTarget.ts  ActionType.ts  Agent.ts  AgentDiedDetails.ts  AgentId.ts  AgentState.ts  AgentStateSnapshot.ts  CombatInitiatedDetails.ts  CombatIntent.ts  CombatResolvedDetails.ts  DecisionRecord.ts  EconomyStats.ts  EnforcementAppliedDetails.ts  EntityType.ts  Era.ts  Event.ts  EventId.ts  EventType.ts  FreeformAction.ts  Group.ts  GroupFormedDetails.ts  GroupId.ts  InteractionCause.ts  KnowledgeDiscoveredDetails.ts  KnowledgeTaughtDetails.ts  KnownRoute.ts  LedgerEntry.ts  LedgerEntryId.ts  LedgerEntryType.ts  Location.ts  LocationEffects.ts  LocationId.ts  MemoryEntry.ts  (+48 more)
crates/emergence-types/src/: actions.rs  enums.rs  ids.rs  lib.rs  perception.rs  structs.rs
crates/emergence-world/: Cargo.toml
crates/emergence-world/src/: cultural_knowledge.rs  diffusion.rs  environment.rs  error.rs  farming.rs  innovation.rs  knowledge.rs  lib.rs  location.rs  resource.rs  route.rs  starting_world.rs  structure.rs  world_map.rs
observer/: .prettierrc.json  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
observer/src/: App.tsx  main.tsx
observer/src/components/: AgentInspector.tsx  DecisionViewer.tsx  DiscoveryLog.tsx  EconomyMonitor.tsx  OperatorControls.tsx  PopulationTracker.tsx  SocialConstructs.tsx  SocialGraph.tsx  Timeline.tsx  WorldMap.tsx
observer/src/components/ui/: badge.tsx  card.tsx  chart-tooltip.tsx  dialog.tsx  tabs.tsx  tooltip.tsx
observer/src/hooks/: useApi.ts  useOperator.ts  useWebSocket.ts
observer/src/styles/: theme.css
observer/src/styles/base/: reset.css
observer/src/styles/layers/: d3.css
observer/src/styles/tokens/: colors.css  elevation.css  motion.css  spacing.css  typography.css
observer/src/types/: schemas.ts
observer/src/utils/: format.ts  mockData.ts
scripts/: compare-run.py  first-run.sh  pre-register.py  reset.sh  stop.sh  validate.sh
security/: seccomp-emergence.json
templates/: actions.j2  identity.j2  memory.j2  perception.j2  system.j2
