[package]
name = "emergence-runner"
description = "Agent runtime with LLM orchestration for the Emergence simulation"
edition.workspace = true
version.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "emergence-runner"
path = "src/main.rs"

[dependencies]
# Shared simulation types (compile-time checked perception and action payloads)
emergence-types = { path = "../emergence-types" }

# Async runtime
tokio = { workspace = true }

# HTTP client for LLM API calls
reqwest = { workspace = true }

# Prompt template engine (templates loaded from files at runtime)
minijinja = { workspace = true }

# NATS pub/sub messaging
async-nats = { workspace = true }
futures = { workspace = true }

# Financial precision for cost tracking (no floating-point)
rust_decimal = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
