[package]
name = "emergence-types"
description = "Shared type definitions for the Emergence simulation"
edition.workspace = true
version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
ts-rs = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
